--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -268,7 +268,12 @@ ul {
 }
  .post_footer{
      background-color: transparent;
-
+ }
+ .trending_tag{
+     background-color:black;
+     padding: 5px;
+     border: 2px solid #a75fc2;
+     width: available;
  }
 .post_content{
     font-size: 16px;
