--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -10,8 +10,10 @@
     <link type="image/png" href="../../logos/vibez_logo.png" rel="icon">
     <script src="../../js/sidebar.js"></script>
 </header>
+
 <div class="col-lg-4">
         <% for(var i = 0; i < result.length;i++){ %>
+        <div class="card">
         <div>
             <%= result[i].post_title%>
         </div>
@@ -23,6 +25,7 @@
         </div>
         <div>
             <%= result[i].post_tags%>
+        </div>
         </div>
 
     <% } %>
