--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,17 +7,17 @@
 	<title>Vibez</title>
 	 
   
-	<link href="css/styles.css" rel="stylesheet">
-    <link href="css/sidebars.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/signup.css">
-    <link rel="stylesheet" href="css/sign_in.css">
+	<link href="../css/styles.css" rel="stylesheet">
+    <link href="../css/sidebars.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/signup.css">
+    <link rel="stylesheet" href="../css/sign_in.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="icon" type="image/png" href="logos/vibez_logo.png">
-    <script src="js/sidebar.js"></script>
+    <link rel="icon" type="image/png" href="../logos/vibez_logo.png">
+    <script src="../js/sidebar.js"></script>
     
 </head>
 
