--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -262,6 +262,16 @@ ul {
      margin: 5px;
      padding: 5px;
  }
+
+ .card{
+     position: relative;
+     text-align: center;
+     align-content: center;
+ }
+.card-body{
+    position: center;
+    align-content: center;
+}
 .post_tag{
     background-color: transparent;
     color: grey;
@@ -279,7 +289,8 @@ ul {
 .post_content{
     font-size: 16px;
     font-family: sans-serif;
-    border: 2px solid white;
+   
+    width: 100%;
     text-align: center;
     padding: 8px;
     height: auto;
