--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,6 +49,7 @@
     <footer id = "footer">
         <script src="js/userApp.js"></script>
         <script src="js/feedApp.js"></script>
+        <script src="js/profileApp.js"></script>
         <script src = "js/tagApp.js">
 
         </script>
