--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,13 +1,34 @@
 
-<div class = "row">
+<div id="profileApp">
     <div class="d-flex justify-content-center">
         <div class="usrcard">
         Name: <%=usr.name.first%> <%=usr.name.last%><br>
         Email: <%=usr.email%><br>
 
         </div>
+
+
+
+
     </div>
+
+
+    <div v-for ="post in posts" class="d-flex justify-content-center">
+        <div class="card">
+        <div>
+        <div class="post_title">{{post.post_title}}</div>
+        </div>
+            <div>
+            <div class="post_author">{{post.post_author}}</div>
+            </div>
+            <div>
+                <div class="post_content">{{post.post_content}}</div>
+            </div>
+            </div>
+        </div>
     <a class="col-sm-3 button" href="/editProfile">Edit Profile</a>
     <a class="col-md-3 button" href="/delete">Delete Profile</a>
+
+    </div>
 
 </div>
