--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,7 +34,7 @@
                 <a href="/login"  style="background-color: #ed4b4b">Login</a>
                 <a  href="/signup" style="background-color: #f2b157">Sign Up</a>
                 <a href="/myProfile" style="background-color: #75d24b">My Profile</a>
-                <a href="/error" style="background-color: #4b97d8">messages</a>
+                <a href="/messages" style="background-color: #4b97d8">Notifications</a>
                     <a href="/search" style="background-color: #a75fc2">search</a>
                      
             </div>
@@ -50,6 +50,7 @@
         <script src="js/userApp.js"></script>
         <script src="js/feedApp.js"></script>
         <script src="js/profileApp.js"></script>
+        <script src="js/messageApp.js"></script>
         <script src = "js/tagApp.js">
 
         </script>
