--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -30,5 +30,7 @@
     <a class="col-md-3 button" href="/delete">Delete Profile</a>
 
     </div>
-
+    <div>
+        <script src="js/profileApp.js"></script>
+    </div>
 </div>
