Delete Properly Redirects now

--- a/views/security.ejs
+++ b/views/security.ejs
@@ -16,7 +16,7 @@
         <section>
             <h2 class="alert"> Please fill out the Security Questions Below</h2><br>
             <article>
-                <form id="mainForm" action="/" method="GET">
+                <form id="mainForm" action="/login" method="GET">
                     <fieldset class="border">
                         <legend class="w-auto">Account Verification Questions</legend>
                         <div class="row form-group">
