--- a/views/posts/notifications.ejs
+++ b/views/posts/notifications.ejs
@@ -23,7 +23,7 @@
 
             </div>
         </div>
-
+        <button v-bind:id='post.post_author' class="followbutton" v-on:click="unfollow">Unfollow</button>
     </div>
 </div>
 </div>
