--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -14,7 +14,7 @@
 
 
     <div v-for ="post in posts" class="d-flex justify-content-center">
-        <div class="card">
+        <div class="card col-lg-3">
         <div>
         <div class="post_title">{{post.post_title}}</div>
         </div>
@@ -25,12 +25,13 @@
                 <div class="post_content">{{post.post_content}}</div>
             </div>
             </div>
+        <button v-bind:id='post._id' v-bind:class='post._id' class="followbutton" v-on:click="deletePost">Delete Post</button>
         </div>
-    <a class="col-sm-3 button" href="/editProfile">Edit Profile</a>
-    <a class="col-md-3 button" href="/delete">Delete Profile</a>
 
     </div>
-    <div>
-        <script src="js/profileApp.js"></script>
-    </div>
+
+<a class="col-sm-3 button" href="/editProfile">Edit Profile</a>
+    <a class="col-md-3 button" href="/delete">Delete Profile</a>
+
+
 </div>
