--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,7 @@
             
             <div class="navitem" id = "navmenu">
                 <a href="/login"  style="background-color: #ed4b4b">Login</a>
+                <a href="/logout"  style="background-color: orangered">Logout</a>
                 <a  href="/signup" style="background-color: #f2b157">Sign Up</a>
                 <a href="/myProfile" style="background-color: #75d24b">My Profile</a>
                 <a href="/messages" style="background-color: #4b97d8">Notifications</a>
